fix: fix site link

--- a/contacts.html
+++ b/contacts.html
@@ -65,7 +65,7 @@
           </li>
           <li class="contacts-list__item">
             <h2 class="title-2">Site</h2>
-            <p><a href="mail.com">marksite.com</a></p>
+            <p><a href="https://neu-mark.github.io/portfolio/">neu-mark.github.io/portfolio/</a></p>
           </li>
           <li class="contacts-list__item">
             <h2 class="title-2">GitHub</h2>
